# anomalyDetection

./: CMakeLists.txt  Readme.md  db.txt
ScriptsDB/: CMakeLists.txt  create-db-user.sql  create.sh  grant.sql  parameters.sql  schema.sql
src/Monitors/Functional/: CMakeLists.txt
src/Monitors/Functional/CheckAnomalies/src/: averageAnomalyMonitor.cpp  covarianceAnomalyMonitor.cpp  main.cpp  main.h  numberAnomalyMonitor.cpp
src/Monitors/Functional/CheckAverage/: CMakeLists.txt
src/Monitors/Functional/CheckAverage/src/: averageAnomalyMonitor.cpp  main.cpp  main.h
src/Monitors/Functional/CheckCovariance/: CMakeLists.txt
src/Monitors/Functional/CheckCovariance/src/: main.cpp  main.h
src/Monitors/Functional/CheckNumber/: CMakeLists.txt
src/Monitors/Functional/CheckNumber/src/: main.cpp  main.h
src/Monitors/NonFunctional/: CMakeLists.txt
src/Monitors/NonFunctional/AverageAnomalyTime/: CMakeLists.txt
src/Monitors/NonFunctional/AverageAnomalyTime/src/: main.cpp  main.h
src/Monitors/NonFunctional/AverageDetectionTime/: CMakeLists.txt
src/Monitors/NonFunctional/AverageDetectionTime/src/: main.cpp
src/Monitors/NonFunctional/CovarianceAnomalyTime/: CMakeLists.txt
src/Monitors/NonFunctional/CovarianceAnomalyTime/src/: main.cpp
src/Monitors/NonFunctional/CovarianceDetectionTime/: CMakeLists.txt
src/Monitors/NonFunctional/CovarianceDetectionTime/src/: main.cpp
src/SUD/AverageAndCovariance/: CMakeLists.txt
src/SUD/AverageAndCovariance/src/: Makefile  averageValue.cpp  covarianceValue.cpp  createDataWindow.cpp  createMap.cpp  main.cpp  main.h  readDataRedis.cpp  readIDS.cpp  saveAverageInPostgreSQL.cpp  saveAverageOnDB.cpp  saveCovarianceInPostgreSQL.cpp  saveCovarianceOnDB.cpp  saveDataInPostgreSQL.cpp  saveDataOnDB.cpp  sensorSorting.cpp
src/SUD/AverageAnomalyPresence/: CMakeLists.txt
src/SUD/AverageAnomalyPresence/src/: detectAnomaly.cpp  main.cpp  main.h  readDataSQL.cpp  saveAnomalySQL.cpp
src/SUD/AverageAnomalyValue/: CMakeLists.txt
src/SUD/AverageAnomalyValue/src/: calculateAnomaly.cpp  main.cpp  main.h  readDataSQL.cpp  saveAnomalySQL.cpp
src/SUD/CovarianceAnomalyPresence/: CMakeLists.txt
src/SUD/CovarianceAnomalyPresence/src/: main.cpp  updateDataSQL.cpp
src/SUD/CovarianceAnomalyValue/: CMakeLists.txt
src/SUD/CovarianceAnomalyValue/src/: calculateAnomaly.cpp  main.cpp  main.h  readDataSQL.cpp  saveAnomalySQL.cpp
src/TestGenerator/: CMakeLists.txt
src/TestGenerator/src/: Makefile  main.cpp  main.h  readFileCSV.cpp
test/: creationGraphAverage.py  creationGraphLatency.py
